BAEL-7340 Added explicit --add-exports statement for core-java-security-4